--- a/Course 1 ─ End-to-End Machine Learning with TensorFlow on GCP/Readme
+++ b/Course 1 ─ End-to-End Machine Learning with TensorFlow on GCP/Readme
@@ -1,2 +1,3 @@
-Contains all the exercises and the course certificate for this Course 1 of 5 of the Advanced Machine Learning with TensorFlow on Google Cloud Platform Specialization
+Contains all the quizes, exercises and the course certificate for this Course 1 of 5 of the Advanced Machine Learning with TensorFlow on Google Cloud Platform Specialization
 All the exercises are notebook files (.ipynb) 
+All the quizes are webpages
