--- a/Course 3 ─ Image Understanding with TensorFlow on GCP/Readme
+++ b/Course 3 ─ Image Understanding with TensorFlow on GCP/Readme
@@ -1,3 +1,3 @@
 Contains all the quizes, exercises and the course certificate for this Course 3 of 5 of the Advanced Machine Learning with TensorFlow on Google Cloud Platform Specialization
 All the exercises are notebook files (.ipynb) 
-All the quizes are webpages.
+All the quizes are webpages
